--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -495,6 +495,7 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="Czx-Xo-YLq" id="zyE-Ex-cID"/>
+                                    <outlet property="delegate" destination="Czx-Xo-YLq" id="cpl-vx-eU9"/>
                                 </connections>
                             </tableView>
                         </subviews>
